[package]
name = "huehuehue"
version = "0.0.4"
description = "A Tauri App to manage your Philips Hue devices from anywhere"
authors = [
    "Kyrill Gobber <kyrill@gobber.ch>",
    "Soryn Bächli <>",
    "Cedric Schwyter <cedricschwyter@bluewin.ch>",
]
license = ""
repository = "https://github.com/KyrillGobber/huehuehue"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "huehuehue"
path = "./main.rs"

[lib]
name = "huehuehue"
path = "./lib.rs"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
mdns = "3.0.0"
futures-util = "0.3.28"
log = "0.4.19"
env_logger = "0.10.0"
reachable = "0.2.2"
reqwest = { version = "0.11.18", features = ["json"] }
paste = "1.0.13"
serde_derive = "1.0.164"
thiserror = "1.0.43"
specta = "1.0.4"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
clap = { version = "4.3.11", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
