[package]
name = "huehuehue"
version = "0.0.5"
description = "A Tauri App to manage your Philips Hue devices from anywhere"
authors = [
    "Kyrill Gobber <kyrill@gobber.ch>",
    "Soryn Bächli <contact@soryn.dev>",
    "Cedric Schwyter <cedric@schwyter.io>",
]
license = ""
repository = "https://github.com/woollygoods/huehuehue"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "huehuehue"
path = "./main.rs"

[lib]
name = "huehuehue"
path = "./lib.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
mdns = "3.0.0"
futures-util = "0.3.29"
log = "0.4.20"
env_logger = "0.10.0"
reachable = "0.2.2"
reqwest = { version = "0.11.22", features = ["json"] }
paste = "1.0.14"
serde_derive = "1.0.164"
thiserror = "1.0.50"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["javascript", "typescript"] }
clap = { version = "4.4.8", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
